// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseFetchError format isomorphic-fetch response error correctly 1`] = `
Object {
  "category": "FETCH_RESPONSE_ERROR",
  "contentType": "text/plain; charset=utf-8",
  "message": "403 Forbidden",
  "status": 403,
}
`;

exports[`parseFetchError format network error correctly 1`] = `
Object {
  "category": "FETCH_NETWORK_ERROR",
  "code": "MOCKED_FETCH_NETWORK_ERROR_CODE",
  "message": "mocked fetch network error",
}
`;

exports[`parseFetchError format node-fetch response error correctly 1`] = `
Object {
  "category": "FETCH_RESPONSE_ERROR",
  "contentType": "text/plain; charset=utf-8",
  "message": "403 Forbidden",
  "status": 403,
}
`;

exports[`parseFetchNetworkError format network error correctly 1`] = `
Object {
  "category": "FETCH_NETWORK_ERROR",
  "code": "MOCKED_FETCH_NETWORK_ERROR_CODE",
  "message": "mocked fetch network error",
}
`;

exports[`parseFetchResponseError format error in application/json contentType correctly 1`] = `
Object {
  "category": "FETCH_RESPONSE_ERROR",
  "contentType": "application/json; charset=utf-8",
  "message": Object {
    "document": "some url",
    "message": "some message",
  },
  "status": 404,
}
`;

exports[`parseFetchResponseError format error in text/html contentType correctly 1`] = `
Object {
  "category": "FETCH_RESPONSE_ERROR",
  "contentType": "text/html; charset=utf-8",
  "message": "<html></html>",
  "status": 404,
}
`;

exports[`parseFetchResponseError format error in text/plain contentType correctly 1`] = `
Object {
  "category": "FETCH_RESPONSE_ERROR",
  "contentType": "text/plain; charset=utf-8",
  "message": "403 Forbidden",
  "status": 403,
}
`;

exports[`parseFetchResponseError reports wrong response being threw to catch if response is ok 1`] = `
Object {
  "category": "FETCH_RESPONSE_OK",
  "message": "it shouldn't be caught as exception, please check the code",
  "status": 200,
}
`;
